--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,10 @@ http {
 		location /server/ {
 			proxy_pass http://server:8080/;
 		}
+		location /github-webhook/ {
+                        proxy_pass http://jenkins:8080/github-webhook;
+                }
+	
 	}
 }
 
